src/test/06-Errors/error-new-prim.txt
error-new-prim.ck:1:5: error: cannot use 'new' on primitive type 'int'...
[1] new int;
        ^
error-new-prim.ck: (primitive types: 'int', 'float', 'time', 'dur', 'vec3', etc.)
